# Fetchium

./: .dockerignore  .env.example  .gitignore  ADMIN_DASHBOARD_PLAN.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Jenkinsfile  LAUNCH_TASKS.md  LICENSE-APACHE  LICENSE-MIT  PRODUCT_PLAN.md  README.md  SECURITY.md  TASKS.md  VISION.md  benchmark_output.txt  benchmark_report_2dcfbbfa.json  benchmark_report_63f85c34.json  benchmark_report_80809aad.json  benchmark_report_ea97bacd.json  benchmark_report_fd1aa2f1.json  debug_log.txt  deep_benchmark.py  dist-workspace.toml  fetchium_benchmark.py  glama.json  load_test.py  log_best_local_llm_for_coding_on_macbook_pro_m3_max.txt  log_frieren_beyond_journey's_end_ending_explained.txt  log_how_to_implement_oauth2_in_rust_using_axum.txt  log_latest_developments_in_solid_state_batteries.txt  log_rust_vs_go_performance_benchmark_2025.txt  log_what_are_the_symptoms_of_long_covid_in_adults_2025.txt  package.json  prd.md  release-please-config.json  (+17 more)
.cargo/: config.toml
adapters/crewai/: README.md  pyproject.toml
adapters/crewai/fetchium_crewai/: __init__.py  tool.py
adapters/crewai/hypersearchx_crewai/: __init__.py  tool.py
adapters/crewai/tests/: test_tool.py
adapters/langchain/: README.md  pyproject.toml
adapters/langchain/fetchium_langchain/: __init__.py  retriever.py
adapters/langchain/hypersearchx_langchain/: __init__.py  retriever.py
adapters/langchain/tests/: test_retriever.py
crates/fetchium-api/: Cargo.toml
crates/fetchium-api/src/: auth.rs  handlers.rs  handlers_auth.rs  handlers_proxy.rs  jobs.rs  lib.rs  middleware.rs  route_registry.rs  routes.rs  types.rs
crates/fetchium-api/src/admin/: anomaly.rs  approval.rs  audit.rs  auth.rs  billing.rs  campaigns.rs  crm.rs  db.rs  db_query.rs  export.rs  flags.rs  incidents.rs  keys.rs  metrics.rs  mod.rs  orgs.rs  proxy_ops.rs  rbac.rs  search.rs  support.rs  usage.rs  users.rs
crates/fetchium-mcp/: Cargo.toml
crates/fetchium-mcp/src/: handlers.rs  lib.rs  tools.rs
crates/hsx-api/: Cargo.toml
crates/hsx-api/src/: auth.rs  handlers.rs  handlers_auth.rs  lib.rs  middleware.rs  routes.rs  types.rs
crates/hsx-cli/: Cargo.toml
crates/hsx-cli/src/: cli.rs  main.rs  output.rs
crates/hsx-cli/src/commands/: agent_fetch.rs  agent_research.rs  agent_search.rs  ai.rs  cache.rs  compare.rs  config.rs  deep.rs  digest.rs  doctor.rs  fetch.rs  index.rs  intelligence.rs  mod.rs  monitor.rs  plugin.rs  provider.rs  radar.rs  research.rs  search.rs  serve.rs  social.rs  subscribe.rs  workspace.rs  youtube.rs
crates/hsx-cli/src/tui/: app.rs
crates/hsx-cli/tests/: cli_basic.rs  cli_output_formats.rs  cli_smoke.rs
crates/hsx-core/: Cargo.toml
crates/hsx-core/benches/: extraction.rs  ranking.rs  token.rs
crates/hsx-core/src/: api_facade.rs  config.rs  error.rs  lib.rs  test_utils.rs  types.rs
crates/hsx-core/src/ai/: credentials.rs  mod.rs  ollama.rs  pipeline.rs  prompt.rs  provider_client.rs  providers.rs  router.rs  sandwich.rs  setup.rs  types.rs
crates/hsx-core/src/browser/: pool.rs  tab.rs
crates/hsx-core/src/cache/: mod.rs
crates/hsx-core/src/citation/: evidence_graph.rs  evidence_tracker.rs  formatter.rs  mod.rs  types.rs
crates/hsx-core/src/collab/: branch.rs  mod.rs  sync.rs
crates/hsx-core/src/compare/: mod.rs  parser.rs
crates/hsx-core/src/domain/: financial.rs  mod.rs  security.rs
crates/hsx-core/src/embeddings/: cache.rs  engine.rs
crates/hsx-core/src/evolve/: ab_test.rs  automl.rs  mod.rs  retrain.rs
crates/hsx-core/src/export/: bibtex.rs  mod.rs  pandoc.rs
crates/hsx-core/src/extract/: boilerplate.rs  cep_predictor.rs  layer1.rs  layer2.rs  layer4.rs  layer5.rs  mod.rs  pipeline.rs
crates/hsx-core/src/http/: client.rs  mod.rs  robots.rs  sanitize.rs  tls.rs
crates/hsx-core/src/index/: document.rs  mod.rs  store.rs  vector.rs
crates/hsx-core/src/intelligence/: acs.rs  cce.rs  crp.rs  edf.rs  mod.rs  pie.rs  sgt.rs  totr.rs
crates/hsx-core/src/intelligence/pie/: fpm.rs  pkg.rs  qpm.rs  stm.rs
crates/hsx-core/src/monitor/: mod.rs  snapshot.rs
crates/hsx-core/src/multimodal/: mod.rs  ocr.rs  pdf.rs  video.rs
crates/hsx-core/src/output/: mod.rs
crates/hsx-core/src/plugin/: loader.rs  manifest.rs  mod.rs  registry.rs  traits.rs
crates/hsx-core/src/privacy/: encryption.rs  expiry.rs  mod.rs  modes.rs  redact.rs  tor.rs
crates/hsx-core/src/proactive/: anomaly.rs  digest.rs  mod.rs  prefetch.rs  radar.rs  subscription.rs
crates/hsx-core/src/qadd/: mod.rs  pipeline.rs  pruning.rs
crates/hsx-core/src/query/: crosslingual.rs  hyde.rs  mod.rs
crates/hsx-core/src/rank/: bm25.rs  cluster.rs  evidence.rs  fusion.rs  mod.rs  signals.rs  temporal.rs  trust.rs
crates/hsx-core/src/research/: mod.rs  pipeline.rs  srp.rs
crates/hsx-core/src/resilience/: bulkhead.rs  circuit_breaker.rs  mod.rs
crates/hsx-core/src/resource/: mod.rs
crates/hsx-core/src/search/: arxiv.rs  backend_selector.rs  bing.rs  brave.rs  dedup.rs  duckduckgo.rs  fallback.rs  github.rs  google.rs  hackernews.rs  latency.rs  mod.rs  orchestrator.rs  reddit.rs  scholar.rs  searxng.rs  stackoverflow.rs  wikipedia.rs
crates/hsx-core/src/social/: hackernews.rs  types.rs  validate.rs
crates/hsx-core/src/telemetry/: mod.rs
crates/hsx-core/src/token/: budget.rs  counter.rs  mod.rs  pds.rs  qatbe.rs  scs.rs
crates/hsx-core/src/validate/: authority.rs  calibration.rs  content.rs  cross_source.rs  mod.rs  output.rs  rar.rs  temporal.rs  types.rs
crates/hsx-core/src/youtube/: comments.rs  metadata.rs  pipeline.rs  search.rs  transcript.rs  types.rs  universal.rs
crates/hsx-core/tests/: fetch_extract.rs  ranking.rs  security.rs
crates/hsx-mcp/: Cargo.toml
crates/hsx-mcp/src/: handlers.rs  lib.rs  tools.rs
docs/: deploy.md  (+4 more)
fuzz/: Cargo.toml
fuzz/corpus/config/: seed1.toml
fuzz/corpus/html/: seed1.html  seed2.html
fuzz/corpus/json/: seed1.json
fuzz/corpus/url/: seed1.txt  seed2.txt
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_html_extract.rs  fuzz_json_deser.rs  fuzz_robots_parse.rs  fuzz_url_tls.rs
(+613 files in other folders)
