[workspace]
resolver = "2"
members = [
    "crates/hsx-core",
    "crates/hsx-cli",
    "crates/hsx-mcp",
    "crates/hsx-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hypersearchx/hypersearchx"
description = "AI-native search engine for humans and agents"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "cookies"] }

# HTML parsing
scraper = "0.21"
lol_html = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
indicatif = "0.17"
console = "0.15"
colored = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Full-text search
tantivy = "0.22"

# Configuration
config = "0.14"
dirs = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System info
sysinfo = "0.32"

# Utilities
url = { version = "2", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
dashmap = "6"
parking_lot = "0.12"

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

# Cache
moka = { version = "0.12", features = ["future"] }

# Testing
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6"
tempfile = "3"

# Core library (internal)
hsx-core = { path = "crates/hsx-core" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
