[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetchium-langchain"
version = "0.1.0"
description = "LangChain Retriever adapter for Fetchium — token-efficient AI-native web search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["langchain", "retriever", "search", "fetchium", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.2",
]

[project.optional-dependencies]
rest = ["requests>=2.31"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/zuhabul/fetchium"
Repository = "https://github.com/zuhabul/fetchium"
Issues = "https://github.com/zuhabul/fetchium/issues"

[tool.hatch.build.targets.wheel]
packages = ["fetchium_langchain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
