[package]
name = "fetchium-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fetchium REST API server"

[dependencies]
fetchium-core.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
sha2.workspace = true
parking_lot.workspace = true
rand.workspace = true
dirs.workspace = true
argon2.workspace = true
totp-rs.workspace = true
base32.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
