[package]
name = "fetchium-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Fetchium MCP server — Model Context Protocol integration"

[dependencies]
fetchium-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
axum.workspace = true
tower-http.workspace = true
