[package]
name = "hsx-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HyperSearchX REST API server"

[dependencies]
hsx-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
