[package]
name = "hsx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HyperSearchX CLI — AI-native search for humans and agents"

[[bin]]
name = "hsx"
path = "src/main.rs"

[dependencies]
hsx-core.workspace = true
hsx-mcp = { path = "../hsx-mcp" }
hsx-api = { path = "../hsx-api" }

# CLI
clap.workspace = true
indicatif.workspace = true
console.workspace = true
colored.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# HTTP (for doctor command)
reqwest.workspace = true

# System info (for doctor command)
sysinfo.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Time and unique IDs (needed by search, agent-search, agent-fetch, agent-research)
chrono.workspace = true
uuid.workspace = true
url.workspace = true
sha2.workspace = true

# Phase 7: TUI + shell completions
ratatui.workspace = true
crossterm.workspace = true
clap_complete.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
