[package]
name = "hsx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HyperSearchX CLI — AI-native search for humans and agents"

# cargo-binstall: `cargo binstall hsx` downloads a pre-built binary instead of compiling.
# Maps platform names to GitHub Release artifact filenames.
[package.metadata.binstall]
pkg-url = "https://github.com/zuhabul/HyperSearchX/releases/download/v{ version }/hsx-{ target-family }-{ target-arch }.tar.gz"
bin-dir = "hsx{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides."x86_64-pc-windows-msvc"]
pkg-url = "https://github.com/zuhabul/HyperSearchX/releases/download/v{ version }/hsx-win-x64.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides."x86_64-unknown-linux-gnu"]
pkg-url = "https://github.com/zuhabul/HyperSearchX/releases/download/v{ version }/hsx-linux-x64.tar.gz"

[package.metadata.binstall.overrides."aarch64-unknown-linux-gnu"]
pkg-url = "https://github.com/zuhabul/HyperSearchX/releases/download/v{ version }/hsx-linux-arm64.tar.gz"

[package.metadata.binstall.overrides."x86_64-apple-darwin"]
pkg-url = "https://github.com/zuhabul/HyperSearchX/releases/download/v{ version }/hsx-darwin-x64.tar.gz"

[package.metadata.binstall.overrides."aarch64-apple-darwin"]
pkg-url = "https://github.com/zuhabul/HyperSearchX/releases/download/v{ version }/hsx-darwin-arm64.tar.gz"

[[bin]]
name = "hsx"
path = "src/main.rs"

[dependencies]
hsx-core.workspace = true
hsx-mcp = { path = "../hsx-mcp" }
hsx-api = { path = "../hsx-api" }

# CLI
clap.workspace = true
indicatif.workspace = true
console.workspace = true
colored.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# HTTP (for doctor command)
reqwest.workspace = true

# System info (for doctor command)
sysinfo.workspace = true
dirs.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Time and unique IDs (needed by search, agent-search, agent-fetch, agent-research)
chrono.workspace = true
uuid.workspace = true
url.workspace = true
sha2.workspace = true

# Phase 7: TUI + shell completions
ratatui.workspace = true
crossterm.workspace = true
clap_complete.workspace = true

[features]
# Enable headless Chromium browser pool for CAPTCHA-resistant Google/Bing search.
# Requires Chrome/Chromium to be installed. Build with: cargo build --features headless
headless = ["hsx-core/headless"]

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
