[package]
name = "hsx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HyperSearchX core library — search, extract, rank, validate, cache"

[features]
default = ["http-backends"]
http-backends = []
headless = ["dep:chromiumoxide"]
embeddings = ["dep:fastembed"]
vector-search = ["dep:usearch"]
mcp = ["dep:rmcp"]
llama = ["dep:llama-cpp-2"]

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true

# HTTP
reqwest.workspace = true

# HTML
scraper.workspace = true
lol_html.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Database & search
rusqlite.workspace = true
tantivy.workspace = true

# Config
config.workspace = true
dirs.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# System
sysinfo.workspace = true

# Utilities
url.workspace = true
base64.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
moka = { version = "0.12", features = ["future"] }
similar.workspace = true
tempfile.workspace = true

# Phase 7: encryption for privacy module
aes-gcm.workspace = true
argon2.workspace = true

# Optional: Headless browser
chromiumoxide = { version = "0.9", optional = true }

# Optional: Embeddings (fastembed wraps ort v2, handles model download + tokenisation)
fastembed = { version = "4", optional = true }

# Optional: Vector search
usearch = { version = "2", optional = true }

# Optional: MCP server
rmcp = { version = "0.1", optional = true, features = ["server"] }

# Optional: Local LLM
llama-cpp-2 = { version = "0.1", optional = true }
tiktoken-rs = "0.5"

ammonia.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
insta.workspace = true
wiremock.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "extraction"
harness = false

[[bench]]
name = "ranking"
harness = false

[[bench]]
name = "token"
harness = false
