[package]
name = "hsx-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HyperSearchX MCP server — Model Context Protocol integration"

[dependencies]
hsx-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
